# old-kak-spell

./: .flake8  .gitignore  CHANGELOG.md  Cargo.toml  README.md  check.sh  kak-spell.kak  mypy.ini  pyproject.toml  setup.cfg  tbump.toml
kak_spell/: __init__.py  checker.py  cli.py  kak.py  main.py
src/: errors.rs  lib.rs  main.rs
src/cli/: main.rs  syntax.rs
test/: conftest.py  git-commit  test_checker.py  test_cli.py  test_kak.py  test_main.py
