[metadata]
name = kak-spell
version = 0.1.0
description = Wrapping Enchant for Kakoune
author = d.merej@gmail.com

[options]
packages = find:

install_requires =
  path.py
  pyenchant
  pyxdg


[options.extras_require]
dev =
  flake8
  pytest
  pytest-mock
  mypy

[options.entry_points]
console_scripts =
  kak-spell = kak_spell.cli:main


[flake8]
max-line-length = 100
max-complexity = 10
ignore = E203, E221
